[package]
name = "riano"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.prof]
inherits = "release"
debug = true

[dependencies]
cpal = "0.15.3"
crossbeam = "0.8.4"
derivative = "2.2.0"
directories = "5.0.1"
eframe = "0.27.2"
egui_plot = "0.27.2"
glam = "0.28.0"
itertools = "0.13.0"
midi-msg = "0.7.1"
midir = "0.10.0"
rayon = "1.10.0"
ringbuf = "0.4.1"
rustfft = "6.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
